Fix Nimbus font alignment issue on Firefox on Linux systems Linux aliases Helvetica to Nimbus (defined by fontconfig package), which presents a vertical alignment issue in Quasar. It appears that Chromium overrides the Nimbus alias to instead use Liberation Sans, which does not have an alignment issue. Fix prioritizes Liberation Sans over Helvetica when possible to correct the text alignment in Firefox.

--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -20,5 +20,5 @@ $warning   : #F2C037
 
 $brand-primary : #00B4FF
 
-$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
+$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Liberation Sans", Helvetica, Arial, sans-serif
 $font-family-avenir: Avenir, $font-family
